Fill form width overflow possible fix pt.3

--- a/app/completare-cv/style.css
+++ b/app/completare-cv/style.css
@@ -7,6 +7,10 @@
     text-align: center;
   }
 
+  .page-content{
+    border: 2px solid red;
+  }
+
   @media screen and (min-width: 370px) {
     > h1 {
       font-size: 50px;
@@ -19,7 +23,7 @@
     }
   }
 
-  .content {
+  .page-content {
     @media screen and (min-width: 800px) {
       display: grid;
       grid-template-columns: 1fr 1fr;
