--- a/components/pages/completare-cv/FillForm.css
+++ b/components/pages/completare-cv/FillForm.css
@@ -1,5 +1,6 @@
 .fill-form {
-  
+  border: 2px dotted blue;
+
   form {
     padding: 0 20px;
     margin-bottom: 50px;
@@ -40,6 +41,7 @@
     fieldset {
       border: none;
       margin-top: 50px;
+      border: 2px solid white;
 
       legend {
         font-size: 20px;
